Downgrade Dagre and embedd it in nomnoml
Since the latest version (0.7.1) of Dagre caused so many undesireable
effects, going back to the older version and embedding it within nomnoml
instead seems like a better option. The size of `nomnoml.js` went from 40k
to 80k as a result (note: Dagre istelf embeds graphlib).

--- a/bower.json
+++ b/bower.json
@@ -30,8 +30,7 @@
     "design/"
   ],
   "dependencies": {
-    "lodash": "~3.7.0",
-    "dagre": "~0.7.1"
+    "lodash": "~3.7.0"
   },
   "resolutions": {
     "lodash": "~3.7.0"
