--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nomnoml",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "description": "The sassy UML renderer that generates diagrams from text",
   "homepage": "http://www.nomnoml.com",
   "author": "Daniel Kallin <daniel.kallin@gmail.com>",
@@ -11,10 +11,11 @@
   "main": "dist/nomnoml.js",
   "files": ["dist/nomnoml.js"],
   "dependencies": {
-    "jison": "0.4.13",
     "lodash": "~3.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jison": "0.4.13"
+  },
   "scripts": {
     "prepublish": "node build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
