Fix bower.json, broken json

--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
     "*.js",
     "*.png",
     "*.json",
-    "*.html"
+    "*.html",
     "node_modules/",
     "bower_components/",
     "test/",
