--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "main": "dist/nomnoml.js",
   "files": ["dist/nomnoml.js"],
   "dependencies": {
-    "lodash": "~3.7.0"
+    "lodash": "~3.7.0",
+    "dagre": "0.4.x"
   },
   "devDependencies": {
     "jison": "0.4.13"
