renderSVG now sets width/height based on the measurer.
This ensures the SVG takes up the appropriate horizontal and vertical space within a document.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jison": "0.4.13"
   },
   "scripts": {
-    "prepublish": "node build.js",
+    "build": "node build",
+    "prepublish": "node build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "directories": {
