--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dist/nomnoml-cli.js"
   ],
   "dependencies": {
-    "lodash": "~3.7.0",
+    "lodash": "4.17.11",
     "dagre": "0.4.x"
   },
   "devDependencies": {
