--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "dependencies": {
     "lodash": "4.17.11",
-    "dagre": "0.4.x"
+    "dagre": "0.8.4"
   },
   "devDependencies": {
     "jshint": "2.10.2",
