“prepare” script run all tests

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "jison": "0.4.13"
   },
   "scripts": {
+    "prepare": "npm run build && npm run test && npm run test_cli",
     "build": "node build.js",
-    "prepare": "node build.js",
     "test": "node test/nomnoml.spec.js",
     "test_cli": "node dist/nomnoml-cli.js sample.nomnoml test/output.node-test.svg"
   },
