remove minification from build pipe

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "prepare": "npm run build && npm run test && npm run test_cli",
+    "minify-web": "uglifyjs dist/nomnoml.web.js --output dist/nomnoml.web.js",
     "build": "tsc & node build.js",
     "test": "node test/nomnoml.spec.js",
     "test_cli": "node dist/nomnoml-cli.js test/import-test.nomnoml test/output.node-test.svg"
