--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nomnoml",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "description": "The sassy UML renderer that generates diagrams from text",
   "homepage": "http://www.nomnoml.com",
   "author": "Daniel Kallin <daniel.kallin@gmail.com>",
@@ -11,9 +11,11 @@
   "main": "dist/nomnoml.js",
   "files": [
     "dist/nomnoml.js",
+    "dist/nomnoml-file.js",
     "dist/nomnoml-cli.js"
   ],
   "dependencies": {
+    "@types/node": "^13.13.2",
     "dagre": "0.8.4"
   },
   "devDependencies": {
