convert to react

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "bundle": "node build/build.js",
     "test": "node test/test.js",
     "test_cli": "node dist/nomnoml-cli.js test/import-test.nomnoml test/output.node-test.svg",
-    "webapp": "node build/build-icons.js && tsc --build webapp/tsconfig.json"
+    "webapp": "tsc --build webapp/tsconfig.json"
   },
   "directories": {
     "test": "test"
