--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
+node_modules/
+
+commercial/
+additionals.js
 nomnoml.sublime-project
 nomnoml.sublime-workspace
-node_modules/
-output.*
-nomnoml-0.1.0.tgz
-commercial/
 dist/nomnoml.compiled.js
 dist/nomnoml.web.js
 dist/webapp.js
 deploy.sh
-additionals.js
+
+cache/
+output.*
+
