cleanup of npm package

--- a/package.json
+++ b/package.json
@@ -11,18 +11,7 @@
   "main": "dist/nomnoml.js",
   "files": [
     "dist/nomnoml.js",
-    "dist/nomnoml-file.js",
-    "dist/nomnoml-cli.js",
-    "dist/webapp.js",
-    "dist/nomnoml.web.js",
-    "index.html",
-    "nomnoml.css",
-    "favicon.png",
-    "img/interaction-tutorial.svg",
-    "codemirror/solarized.nomnoml.css",
-    "codemirror/nomnoml.codemirror-mode.js",
-    "codemirror/codemirror.css",
-    "codemirror/codemirror-compressed.js"
+    "dist/nomnoml-cli.js"
   ],
   "dependencies": {
     "dagre": "0.8.5"
