--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "dagre": "0.8.5"
   },
   "devDependencies": {
-    "@types/node": "^14.6.4",
-    "jison": "0.4.18",
-    "terser": "^5.3.2",
-    "typescript": "^4.0.2"
+    "@types/node": "^14.14.0",
+    "jison": "^0.4.18",
+    "terser": "^5.3.7",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "prepare": "npm run build && npm run test && npm run test_cli && npm run minify",
