--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nomnoml",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "The sassy UML renderer that generates diagrams from text",
   "homepage": "http://www.nomnoml.com",
   "author": "Daniel Kallin <daniel.kallin@gmail.com>",
@@ -41,9 +41,9 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "prepare": "npm run build && npm test && npm run webapp",
+    "build": "npm run lib && npm run webapp && npm run test",
     "webapp": "rollup -c webapp/rollup.config.js",
-    "build": "tsc --build webapp/tsconfig.json && tsc --build src/tsconfig.json && node build/build.js",
+    "lib": "tsc --build src/tsconfig.json && node build/build.js",
     "test": "node test/test.js && npm run test_cli",
     "test_cli": "node dist/nomnoml-cli.js test/import-test.nomnoml test/output.node-test.svg"
   },
