--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "types": "index.d.ts",
   "dependencies": {
-    "dagre": "0.8.5"
+    "graphre": "0.1.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.3",
