--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "dist/nomnoml.js",
     "dist/nomnoml-cli.js",
     "dist/webapp.js",
-    "dist/nomnoml.web.js",
     "index.html",
     "nomnoml.css",
     "favicon.png",
@@ -26,19 +25,26 @@
   ],
   "types": "index.d.ts",
   "dependencies": {
+    "file-saver": "^2.0.2",
     "graphre": "0.1.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-typescript": "^6.1.0",
     "@types/node": "^14.14.3",
     "jison": "^0.4.18",
-    "terser": "^5.3.8",
+    "rollup": "^2.33.1",
+    "rollup-plugin-ignore": "^1.0.9",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "prepare": "npm run build && npm run test && npm run test_cli && npm run minify",
-    "minify": "terser dist/nomnoml.web.js -o dist/nomnoml.web.js && terser dist/webapp.js -o dist/webapp.js",
+    "prepare": "npm run build && npm test && npm run webapp",
+    "webapp": "rollup -c webapp/rollup.config.js",
     "build": "tsc --build webapp/tsconfig.json && tsc --build src/tsconfig.json && node build/build.js",
-    "test": "node test/test.js",
+    "test": "node test/test.js && npm run test_cli",
     "test_cli": "node dist/nomnoml-cli.js test/import-test.nomnoml test/output.node-test.svg"
   },
   "repository": {
