--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "types": "index.d.ts",
   "dependencies": {
     "file-saver": "^2.0.2",
-    "graphre": "0.1.2"
+    "graphre": "^0.1.3"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
