--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
+    "prepare": "npm run webapp",
     "build": "npm run lib && npm run webapp && npm run test",
     "webapp": "rollup -c webapp/rollup.config.js",
     "lib": "tsc --build src/tsconfig.json && node build/build.js",
