--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "prepare": "npm run webapp",
     "build": "npm run lib && npm run webapp && npm run test",
     "webapp": "rollup -c webapp/rollup.config.js",
-    "lib": "tsc --build src/tsconfig.json && node build/build.js",
+    "lib": "node build/build-parser.js && rollup -c src/rollup.config.js && npm test",
     "test": "node test/test.js && npm run test_cli",
     "test_cli": "node dist/nomnoml-cli.js test/import-test.nomnoml test/output.node-test.svg"
   },
