--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "module": "None",
-    "target": "es5",
+    "module": "es6",
+    "target": "es6",
     "noImplicitAny": true,
+    "noUnusedLocals": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "outFile": "../dist/nomnoml.compiled.js",
+    "moduleResolution": "node"
   }
 }
