--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^14.14.3",
     "jison": "^0.4.18",
     "rollup": "^2.33.1",
+    "rollup-plugin-git-version": "^0.3.1",
     "rollup-plugin-ignore": "^1.0.9",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.0.3",
