--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es6",
     "noImplicitAny": true,
     "noUnusedLocals": true,
+    "strictNullChecks": true,
     "removeComments": true,
     "preserveConstEnums": true,
     "moduleResolution": "node"
