server rendered svg - verbal routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "routes": [
-    { "src": "/image.svg", "dest": "api/image.js" }
-  ],
+  "rewrites": [{ "source": "/image.svg", "destination": "/api/image" }],
   "github": {
     "silent": true
   }
