--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "module": "es6",
-    "target": "es5",
+    "target": "es6",
+    "lib": ["dom"],
     "noEmit": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
