--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ nomnoml.sublime-project
 nomnoml.sublime-workspace
 dist/nomnoml.compiled.js
 dist/nomnoml-core-parser.js
+dist/core-parser.js
 dist/webapp.js
 deploy.sh
 
