--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "types": "index.d.ts",
   "dependencies": {
     "graphre": "^0.1.3",
+    "nomnoml": "^1.5.3",
     "peggy": "^2.0.1"
   },
   "devDependencies": {
