--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "types": "index.d.ts",
   "dependencies": {
     "graphre": "^0.1.3",
-    "nomnoml": "^1.5.3",
-    "peggy": "^2.0.1"
+    "nomnoml": "^1.5.3"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.1",
@@ -47,7 +46,7 @@
     "prepare": "npm run webapp",
     "build": "npm run lib && npm run webapp && npm run test",
     "webapp": "rollup -c webapp/rollup.config.js",
-    "lib": "peggy -o dist/core-parser.js src/grammar.pegjs && rollup -c src/rollup.config.js && npm test",
+    "lib": "rollup -c src/rollup.config.js && npm test",
     "test": "node --test --test-reporter=spec && npm run test_cli",
     "test_cli": "rm -f test/output.svg && node dist/nomnoml-cli.js test/import-test.nomnoml test/output.svg"
   },
