--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     "module": "es6",
-    "target": "es6",
+    "target": "es2021",
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "strictNullChecks": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "sourceMap": true
   }
 }
