--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   ],
   "types": "index.d.ts",
   "dependencies": {
-    "graphre": "^0.1.3",
-    "nomnoml": "^1.5.3"
+    "graphre": "^0.1.3"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.1",
