--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@rollup/plugin-typescript": "^8.3.3",
     "@types/node": "^17.0.13",
     "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.22",
     "file-saver": "^2.0.5",
     "jison": "^0.4.18",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.77.0",
     "rollup-plugin-git-version": "^0.3.1",
     "rollup-plugin-ignore": "^1.0.10",
