--- a/package.json
+++ b/package.json
@@ -28,28 +28,28 @@
     "graphre": "^0.1.3"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.3",
-    "@types/node": "^17.0.13",
-    "@types/react": "^18.2.65",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-terser": "0.4.4",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
     "file-saver": "^2.0.5",
     "jison": "^0.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^2.77.0",
+    "rollup": "^4.13.1",
     "rollup-plugin-git-version": "^0.3.1",
     "rollup-plugin-ignore": "^1.0.10",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.3"
   },
   "scripts": {
     "prepare": "npm run webapp",
     "build": "npm run lib && npm run webapp && npm run test",
-    "webapp": "rollup -c webapp/rollup.config.js",
-    "lib": "rollup -c src/rollup.config.js && npm test",
+    "webapp": "rollup --bundleConfigAsCjs -c webapp/rollup.config.js",
+    "lib": "rollup --bundleConfigAsCjs -c src/rollup.config.js && npm test",
     "test": "node --test && npm run test_cli",
     "test_cli": "rm -f test/output.svg && node dist/nomnoml-cli.js test/import-test.nomnoml test/output.svg"
   },
